--- a/ckanext/cioos_theme/templates/package/read_base.html
+++ b/ckanext/cioos_theme/templates/package/read_base.html
@@ -73,7 +73,7 @@
 <section class="module module-narrow module-shallow">
     <h2 class="module-heading">
       <i class="fa fa-database"></i>
-      {{ _('Responsible Organizations') }}
+      {{ _('Responsible Organization') }}
     </h2>
     {% with items = pkg.responsible_organizations %}
     {% if items %}
