--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -1334,12 +1334,13 @@ section{
 // restrict organisation image to a resonable size and center
 .context-info .image img, .context-info .image a {
     display: block;
-    width: auto;
+    width: unset;
     height: 100%;
     max-height: 200px;
-    border-radius: 4px;
+    border-radius: unset;
     margin-left: auto;
     margin-right: auto;
+    max-width: 100%;
 }
 
 @import url(//fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600,700|PT+Sans:400|Raleway:400);
