--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -1245,6 +1245,13 @@ i.fa.translation_icon {
   .identifier_icon_list{
     width: 14px;
   }
+  .input-group-addon{
+    color: #555555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 0;
+  }
 
 }
 
