--- a/ckanext/cioos_theme/templates/snippets/daterange.html
+++ b/ckanext/cioos_theme/templates/snippets/daterange.html
@@ -15,6 +15,9 @@
             data-date-end-date="+0d"
             data-date-keep-empty-values="true"
             data-date-language="{{ h.lang() }}">
+         <div class="input-group-addon">
+           <i class="fa fa-calendar"></i>
+         </div>
          <input type='text' id='datepickerbegin' class="form-control datepicker"/>
          <div class="input-group-addon">{{ _(' to ')}}</div>
          <input type='text' id='datepickerend' class="form-control datepicker" />
