--- a/ckanext/cioos_theme/templates/package/snippets/dates.html
+++ b/ckanext/cioos_theme/templates/package/snippets/dates.html
@@ -79,7 +79,7 @@
 
         {% if dataset_reference_date and h.cioos_load_json(dataset_reference_date) | list | length > 0 %}
           <tr>
-            <th scope="row" class="dataset-label">{{ _("Dataset Reference Date(s)") }}</th>
+            <th scope="row" class="dataset-label">{{ _("Data Reference Date(s)") }}</th>
             <td class="dataset-details">
               {% for d in h.cioos_load_json(dataset_reference_date) %}
                 {% if d['value']| length == 10 %}
