--- a/ckanext/cioos_theme/templates/package/resource_read.html
+++ b/ckanext/cioos_theme/templates/package/resource_read.html
@@ -1,4 +1,23 @@
 {% ckan_extends %}
 
-{% block resource_read_title %}<h1 class="page-heading" title="{{ h.resource_display_name(res) }}">{{ h.resource_display_name(res) | truncate(50) }}</h1>{% endblock %}
-          
+{% block resource_content %}
+  {% block package_archive_notice %}
+    {{ super() }}
+  {% endblock %}
+  {% block resource_read_title %}<h1 class="page-heading" title="{{ h.resource_display_name(res) }}">
+    {{ h.resource_display_name(res) | truncate(60) }}</h1>
+  {% endblock %}
+  {% block resource_read_url %}
+    {{ super() }}
+  {% endblock %}
+  <div class="prose notes" property="rdfs:label">
+    {% if res.description %}
+      {{ h.markdown_extract(h.get_translated(res, 'description')) }}
+    {% endif %}
+    {% if not res.description and package.notes %}
+      <h3>{{ _('Dataset description:') }}</h3>
+      <blockquote>{{ h.markdown_extract(h.get_translated(package, 'notes')) }}</blockquote>
+      <p>{% trans dataset=package.title, url=h.url_for(package.type ~ '.read', id=package.id if is_activity_archive else package.name) %}Source: <a href="{{ url }}">{{ dataset }}</a>{% endtrans %}
+    {% endif %}
+  </div>
+{% endblock %}
