add missing uri display in organization grid view

--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -1240,7 +1240,9 @@ i.fa.translation_icon {
   .dataset-list .dataset-content .identifier_icon_list{
     max-height: 16px;
   }
-
+  .media-grid .identifier_icon_list{
+    max-height: 16px;
+  }
   #dataset-contacts .identifier_icon_list{
     max-height: 16px;
   }
