add isni template, remove harvest object source from templates as they are often null. add organization sorting by dataset count and a few other bug fixes

--- a/ckanext/cioos_theme/templates/snippets/identifier_list.html
+++ b/ckanext/cioos_theme/templates/snippets/identifier_list.html
@@ -13,9 +13,12 @@
   {% elif 'doi.org' in ident %}
     <img src="/base/images/DOI_logo.svg" class="identifier_icon_list">
     {{ '/'.join(ident.rsplit("/", 2)[-2:]) }}
+  {% elif 'isni.org' in ident %}    
+    <img src="/base/images/isni-logo.svg" class="identifier_icon_list">
+    {{ ident.rsplit('/', 1)[-1] }}
   {% else %}
     <label>Id</label>
-    {{ ident.rsplit('/', 1)[-1] }}
+    {{ ident.lstrip('https://').rstrip('/') }}
   {% endif %}
   </a></{{container}}>
 {% endfor %}
