--- a/ckanext/cioos_theme/templates/admin/config.html
+++ b/ckanext/cioos_theme/templates/admin/config.html
@@ -16,7 +16,7 @@
 
       {{ form.input('ckan.site_heading', id='field-ckan-site-heading', label=_('Title Heading on Main Page'), value=data['ckan.site_heading'], error=error, classes=['control-medium'], placeholder='{"en": "<span>CIOOS</span> Data Catalogue", "fr": "Catalogue de données du <span>SIOOC</span>"}') }}
 
-      {{ form.select('ckan.main_css', id='field-ckan-main-css', label=_('Style'), options=styles, selected=data['ckan.main_css'], error=error) }}
+      {{ form.select('ckan.theme', id='field-ckan-main-css', label=_('Style'), options=styles, selected=data['ckan.theme'], error=error) }}
 
       {{ form.input('ckan.site_description', id='field-ckan-site-description', label=_('Site Tag Line'), value=data['ckan.site_description'], error=error, classes=['control-medium']) }}
 
