--- a/ckanext/cioos_theme/templates/snippets/package_item.html
+++ b/ckanext/cioos_theme/templates/snippets/package_item.html
@@ -63,7 +63,7 @@ Example:
               uri = h.cioos_get_fully_qualified_package_uri(
                 package,
                 uri_field='unique-resource-identifier-full',
-                default_authority='doi.org')
+                default_code_space='doi.org')
               )
           }}
         {% endblock %}
