--- a/ckanext/cioos_theme/public/pacific.css
+++ b/ckanext/cioos_theme/public/pacific.css
@@ -93,10 +93,30 @@
 
 .search-form .search-input.search-giant button {
   background-color: #ff6b35;
+  right: 0px;
+}
+
+.cioos-module-search .search-form .search-input {
+    width: 100%;
+    padding: 0;
+}
+
+.cioos-module-search .box {
+    background: none;
+    border: none;
+    padding: 0;
+}
+
+.homepage .module-content-end {
+    margin-bottom: 50px;
 }
 
 .form-control {
-  border-color: #ff6b35;
+    border-color: #b5b5b5;
+}
+
+.form-control:focus, .form-control:hover {
+    border-color: #006E90;
 }
 
 #footer {
