--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -1220,7 +1220,7 @@ i.fa.translation_icon {
   dl.scheming-subfield-list dd {
       float: left;
       min-width: 150px;
-      width: auto;
+      width: 100%;
       max-width: 395px;
   }
 }
@@ -1392,4 +1392,58 @@ section{
     height: fit-content;
 }
 
+
+
+.relationship-list {
+  display: grid;
+}
+
+.relationship-item {
+  padding: 0px;
+
+
+  .label-clear-100 {
+      color: #000;
+      border: 1px solid #ddd;
+      border-radius: 12px;
+      font-size: 12px;
+    }
+
+  .relationship-item-link {
+    padding: 10px;
+    text-decoration: none;
+  }
+
+  .list-group-item-body {
+    padding: 0px;
+  }
+
+  .heading,
+  .description {
+    color: #000;
+    padding: 0;
+  }
+
+  .heading {
+    font-size: 14px;
+    font-weight: bold;
+  }
+
+  .description {
+    font-size: 12px;
+    font-weight: normal;
+    padding-top: 5px;
+    margin-bottom: 0;
+    padding-left: 10px;
+  }
+
+  .align-content-center {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.relationship-item:hover {
+  background-color: #eee;
+}
 @import url(//fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600,700|PT+Sans:400|Raleway:400);
