Removed links involving tools not hosted by VITALITY from header and footer

--- a/ckanext/cioos_theme/templates/vitality_footer.html
+++ b/ckanext/cioos_theme/templates/vitality_footer.html
@@ -69,12 +69,12 @@
             {%- if h.lang() == 'en' -%}
 			<h3 class="footer-widget-title"><span>DATA</span></h3>
 			<div class="textwidget custom-html-widget"><a href="{{ h.url_for('home.index') }}">Catalogue</a><br>
-			<a href="https://assetmap.cioosatlantic.ca/">Asset Map</a></div></aside>
+			</div></aside>
 			</div>
             {%- else -%}
             <h3 class="footer-widget-title"><span>DONNÉES</span></h3>
 			<div class="textwidget custom-html-widget"><a href="{{ h.url_for('home.index') }}">Catalogue</a><br>
-			<a href="https://assetmap.cioosatlantic.ca/?lg=fr">Carte des Actifs</a></div></aside>
+			</div></aside>
 			</div>
             {%- endif -%}
 
