--- a/ckanext/cioos_theme/templates/menu/vitality_menu_list.html
+++ b/ckanext/cioos_theme/templates/menu/vitality_menu_list.html
@@ -1,30 +1,21 @@
 {%- if h.lang() == 'en' -%}
-<li id="menu-item-921" class="menu-item  menu-item-home"><a href="{{ g.site_home_url }}"><span>Home</span></a></li>
-{%- else -%}
-<li id="menu-item-921" class="menu-item  menu-item-home"><a href="{{ g.site_home_url }}fr/"><span>Accueil</span></a></li>
-{%- endif -%}
-{%- if h.lang() == 'en' -%}
-<li id="menu-item-1359" class="menu-item menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}data-tools/"><span>Data Tools</span></a>
-  <ul class="sub-menu">
-    <li id="menu-item-3265" class="menu-item"><a href="{{ g.site_home_url }}erddap">ERDDAP Data Access</a></li>
-  </ul>
+<li id="menu-item-921" class="menu-item  menu-item-home">
+  <a href="{{ g.site_home_url }}"><span>Home</span></a>
 </li>
-<li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="{{ h.url_for('home.index') }}"><span>Data Catalogue</span></a>
-  <ul class="sub-menu">
-    <li id="menu-item-1999" class="menu-item"><a href="{{ h.url_for('home.index') }}dataset">Datasets</a></li>
-    <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}organization">Organizations</a></li>
-  </ul>
+<li id="menu-item-1999" class="menu-item">
+  <a href="{{ h.url_for('home.index') }}dataset">Datasets</a>
+</li>
+<li id="menu-item-2001" class="menu-item">
+  <a href="{{ h.url_for('home.index') }}organization">Organizations</a>
 </li>
 {%- else -%}
-<li id="menu-item-1359" class="menu-item menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}fr/outils/"><span>Outils de Données</span></a>
-  <ul class="sub-menu">
-    <li id="menu-item-3268" class="menu-item"><a href="{{ g.site_home_url }}erddap">ERDDAP Accès aux Données</a></li>
-  </ul>
+<li id="menu-item-921" class="menu-item  menu-item-home">
+  <a href="{{ g.site_home_url }}fr/"><span>Accueil</span></a>
 </li>
-<li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="{{ h.url_for('home.index') }}"><span>Catalogue de Données</span></a>
-  <ul class="sub-menu">
-    <li id="menu-item-1999" class="menu-item"><a href="{{ h.url_for('home.index') }}dataset">Jeux de données</a></li>
-    <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}organization">Organisations</a></li>
-  </ul>
+<li id="menu-item-1999" class="menu-item">
+  <a href="{{ h.url_for('home.index') }}dataset">Jeux de données</a>
+</li>
+<li id="menu-item-2001" class="menu-item">
+  <a href="{{ h.url_for('home.index') }}organization">Organisations</a>
 </li>
 {%- endif -%}
