fix translations for varius fields and add dataset extents to spatial map

--- a/ckanext/cioos_theme/templates/home/layout4.html
+++ b/ckanext/cioos_theme/templates/home/layout4.html
@@ -26,9 +26,9 @@
             {% for item in list|sort(attribute='name') %}
             {% if item.name not in g.exclude_eov %}
             {% set href = h.url_for(controller='dataset', action='search', eov=item.name) %}
-            {% set label = label_function(item) if label_function else item.display_name %}
+            {% set label = label_function(item) if label_function else h.scheming_language_text(item.display_name) %}
             {% set label = _(label) %}
-            {% set label_truncated = h.truncate(label, 18) if not label_function else label %}
+            {% set label_truncated = h.truncate(label, 45) if not label_function else label %}
             {% set count = count_label(item['count']) if count_label else ('%d' % item['count']) %}
             {% set icon_base = g.eov_icon_base_path or '/base/images/eov-icons-svg/' %}
             {% set img_url = item.image_display_url or h.url_for_static(icon_base + item.get('icon')) %}
