--- a/ckanext/cioos_theme/templates/package/search.html
+++ b/ckanext/cioos_theme/templates/package/search.html
@@ -76,7 +76,7 @@
 {% block secondary_content %}
 <div class="filters">
   <div>
-    {% snippet "spatial/snippets/spatial_query.html" , default_extent= h.spatial_default_extent() %}
+    {% snippet "spatial/snippets/spatial_query.html" , default_extent= h.spatial_default_extent(), dataset_extents= h.cioos_get_dataset_extents(q=c.q, fields=c.fields, bbox_values=dict(request.params).get('ext_bbox'), output='json')%}
     {% snippet "snippets/daterange.html" %}
     {% for facet in c.facet_titles %}
       {{ h.snippet('snippets/facet_list.html', title=c.facet_titles[facet], name=facet, hide_empty='true') }}
