--- a/ckanext/cioos_theme/templates/package/snippets/dates.html
+++ b/ckanext/cioos_theme/templates/package/snippets/dates.html
@@ -97,11 +97,12 @@
         {%- set schema = h.scheming_get_dataset_schema('dataset') -%}
         {%- set field = h.scheming_field_by_name(schema.dataset_fields, 'frequency-of-update') -%}
         {%- set choices = h.scheming_field_choices(field) -%}
-        {% if frequency_of_update%}
+        {% if frequency_of_update %}
           <tr>
             <th scope="row" class="dataset-label">{{ _("Frequency of Update") }}</th>
             <td class="dataset-details">
-              {% set value = h.scheming_choices_label(choices, frequency_of_update) %}
+              {% set label = h.scheming_choices_label(choices, frequency_of_update) %}
+              {% set value = h.scheming_language_text(label) %}
               {% if value %}
                 {{- value -}}
               {% endif %}
