--- a/ckanext/cioos_theme/templates/package/snippets/package_citation.html
+++ b/ckanext/cioos_theme/templates/package/snippets/package_citation.html
@@ -14,7 +14,7 @@ Renders a citation for a package
             <p id=cite_output></p>
             <div class="dropdown btn-group" style="float:right;">
               <a href="#" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                Download Citation
+                {{ _('Download Citation') }}
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
@@ -56,7 +56,7 @@ Renders a citation for a package
               </ul>
             </div>
             <span style="float:right; margin-right:5px;">
-              <label for="template">Style</label>
+              <label for="template">{{ _('Style') }}</label>
               <select id="cite_template name="template" size="1" onChange="loadCite(this.value); cite_template=this.value;">
               <option value="apa" selected="selected">APA</option>
               <option value="vancouver">Vancouver</option>
