--- a/ckanext/cioos_theme/templates/package/read.html
+++ b/ckanext/cioos_theme/templates/package/read.html
@@ -21,7 +21,7 @@
         {% set default_local = pkg.get('metadata-language') %}
         {% if title_translation_method and default_local and default_local != h.lang() %}
           <span class="translation_icon_group" title="{{ title_translation_method }}">
-            <i class="fa fa-language translation_icon" aria-hidden="true"></i>
+            <i class="translation_icon" aria-hidden="true"></i>
           </span>
         {% endif %}
 
@@ -49,7 +49,7 @@
           {% set default_local = pkg.get('metadata-language') %}
           {% if notes_translation_method and default_local and default_local != h.lang() %}
             <span class="translation_icon_group" title="{{ notes_translation_method }}">
-              <i class="fa fa-language translation_icon" aria-hidden="true"></i>
+              <i class="translation_icon" aria-hidden="true"></i>
             </span>
           {% endif %}
 
@@ -85,7 +85,11 @@
   {% endblock %}
 
   {% block package_tags %}
-    {% snippet "package/snippets/tags.html", tags=h.cioos_load_json(pkg.get('keywords', {}))[h.lang()] %}
+    {% snippet "package/snippets/tags.html", 
+      tags=h.cioos_load_json(pkg.get('keywords', {}))[h.lang()],
+      tags_translation_method = h.cioos_load_json( h.get_pkg_dict_extra(pkg, 'keywords_translation_method') or pkg.get('keywords_translation_method') or '{}' ), 
+      default_local=pkg.get('metadata-language') 
+    %}
   {% endblock %}
 
   {% set dataset_extent = h.dump_json(h.get_pkg_dict_extra(c.pkg_dict, 'spatial') or c.pkg_dict.get('spatial')) %}
