--- a/ckanext/cioos_theme/templates/package/snippets/tags.html
+++ b/ckanext/cioos_theme/templates/package/snippets/tags.html
@@ -5,12 +5,18 @@
 
   Example:
 
-  {% snippet "package/snippets/tags.html", tags=pkg.tags %}
+  {% snippet "package/snippets/tags.html", tags=pkg.tags, tags_translation_method=pkg.tags_translation_method, default_local=pkg.default_local %}
 
 #}
 {% if tags %}
   <section class="tags">
-    <h3>{{ _('Keywords') }}</h3>
+    <h3>{{ _('Keywords') }}
+        {% if tags_translation_method and default_local and default_local != h.lang() %}
+          <span class="translation_icon_group" title="{{ tags_translation_method }}">
+            <i class="translation_icon" aria-hidden="true"></i>
+          </span>
+        {% endif %}
+    </h3>
     {% snippet 'snippets/tag_list.html', tags=tags, _class='tag-list table-bordered' %}
   </section>
 {% endif %}
