--- a/ckanext/cioos_theme/templates/scheming/package/read.html
+++ b/ckanext/cioos_theme/templates/scheming/package/read.html
@@ -22,7 +22,16 @@
 
   {% if ( h.scheming_field_by_name(schema.dataset_fields, 'notes') or h.scheming_field_by_name(schema.dataset_fields, 'notes_translated') ) and h.get_translated(pkg, 'notes') %}
     <div class="notes embedded-content">
-      {{ h.markdown_extract(h.get_translated(pkg, 'notes'), extract_length=200) }}
+      {{ h.markdown_extract(h.get_translated(pkg, 'notes'), extract_length=200)[:-4] }} {# remove trailing </p> #}
+
+      {% set notes_translation_method = h.scheming_language_text(h.cioos_load_json( h.get_pkg_dict_extra(pkg, 'notes_translation_method') or pkg.get('notes_translation_method') or '{}' )) %}
+      {% if notes_translation_method %}
+        <span class="translation_icon_group" title="{{ notes_translation_method }}">
+          <i class="translation_icon" aria-hidden="true"></i>
+        </span>
+      {% endif %}
+      
+      </p>
     </div>
   {% endif %}
   {% asset 'ckanext-cioos_theme/truncate_js' %}
