replace edition with version in citation js

--- a/ckanext/cioos_theme/templates/package/snippets/package_citation.html
+++ b/ckanext/cioos_theme/templates/package/snippets/package_citation.html
@@ -88,6 +88,7 @@ Renders a citation for a package
       pkg_citation = pkg_citation.replace( /\s\s+/g, ' ' );
       pkg_citation = parseHtmlEnteties(pkg_citation)
       pkg_citation = pkg_citation.replace( /"version": "(\d+.?\d*)"/, '"version": "v$1"');
+      pkg_citation = pkg_citation.replace( /"edition": "(\d+.?\d*)"/, '"version": "v$1"');
       console.log(pkg_citation);
 
       let cite_data = await Cite.async(pkg_citation)
