--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -11,8 +11,10 @@
       </button>
     </div>
     <hgroup class="{{ g.header_class }} navbar-left">
-      {% block header_logo %} {% if g.site_logo %}
-      <a class="logo" href="{{ h.url_for('home.index') }}"><img src="{{ h.url_for_static_or_external(g.site_logo) }}" alt="{{ g.site_title }}" title="{{ g.site_title }}" /></a>
+      {% block header_logo %} {% if h.url_for_static_or_external(h.scheming_language_text(h.cioos_load_json(g.site_logo_translated or g.site_logo))) %}
+      <a class="logo" href="{{ h.url_for('home.index') }}">
+        <img src="{{ h.url_for_static_or_external(h.scheming_language_text(h.cioos_load_json(g.site_logo_translated or g.site_logo))) }}" alt="{{ g.site_title }}" title="{{ g.site_title }}" />
+      </a>
       {% else %}
       <h1>
         <a href="{{ h.url_for('home.index') }}">{{ g.site_title }}</a>
