--- a/ckanext/cioos_theme/templates/home/layout3.html
+++ b/ckanext/cioos_theme/templates/home/layout3.html
@@ -58,7 +58,7 @@
     <h3 class="heading">{{ _("Search by Location") }}</h3>
     <p> To perform a spatial search, define your search area using the draw tool</p>
     <div class="box">
-  	  {% snippet "spatial/snippets/spatial_query.html" , default_extent= h.spatial_default_extent() %}
+      {% snippet "spatial/snippets/spatial_query.html" , default_extent= h.spatial_default_extent(), dataset_extents= h.cioos_get_dataset_extents(q=None, fields=[], bbox_values=None, output='json')%}
   	</div>
   </div>
 </div>
