overload dcat_dataset_show to frame jsonld in schema.org context

--- a/ckanext/cioos_theme/templates/package/read.html
+++ b/ckanext/cioos_theme/templates/package/read.html
@@ -151,6 +151,7 @@
           <li class="nav-item"><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.ttl"><span class="item-label">{{ _('Turtle')}}</span></a></li>
           <li class="nav-item"><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.n3"><span class="item-label">{{ _('Notation3')}}</span></a></li>
           <li class="nav-item"><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.jsonld"><span class="item-label">{{ _('JSON-LD')}}</span></a></li>
+          <li class="nav-item"><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.jsonld?frame=schemaorg"><span class="item-label">{{ _('JSON-LD/Schema.org')}}</span></a></li>
         {% endif %}
           <li class="nav-item"><a href="{{ h.url_for(controller='api',
                               logic_function='package_show',
